# sopfchat

./: Makefile  manage.py  pyproject.toml
sopfchat/: asgi.py  settings.py  urls.py  wsgi.py
webfchat/: admin.py  apps.py  models.py  urls.py  views.py
webfchat/migrations/: 0001_initial.py
webfchat/templates/: fchat_website.html
