[tool.poetry]
name = "sopfchat"
version = "0.1.0"
description = ""
authors = ["NhanDD3 <nhandd3@fpt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
django = "^5.1.2"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
